adwaita gtk3: reworked column headers selectors to separate the visual part               from the sizing one, while fixing Files "jumpy listview" in               backdrop. Thanks to Sebastian Keller for spotting.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
@@ -142,8 +142,25 @@ GtkSwitch.trough:active {
     border-style: solid;
     border-color: transparent;
 }
-
 /* column-headers borders */
+column-header.button,
+column-header .button,
+column-header.button:active,
+column-header .button:active,
+column-header.button:active:hover,
+column-header .button:active:hover,
+column-header.button:backdrop,
+column-header .button:backdrop,
+column-header.button:insensitive,
+column-header .button:insensitive,
+column-header.button:last-child:backdrop,
+column-header:last-child .button:backdrop {
+    border-width: 0 1px 1px 0;
+    border-radius: 0;
+    border-style: solid;
+    border-color: transparent;
+}
+
 column-header.button,
 column-header .button,
 column-header.button:active,
@@ -155,19 +172,6 @@ column-header .button.dnd {
                                   @borders,
                                   @theme_base_color
                                   ) 0 1 1 0;
-    border-width: 0 1px 1px 0;
-    border-radius: 0;
-    border-style: solid;
-    border-color: transparent;
-}
-
-column-header.button:last-child,
-column-header:last-child .button,
-column-header.button:last-child:active,
-column-header:last-child .button:active,
-column-header.button:last-child:active:hover,
-column-header:last-child .button:active:hover {
-    border-width: 0 0 1px 0;
 }
 
 column-header.button:backdrop,
@@ -175,10 +179,6 @@ column-header .button:backdrop,
 column-header.button:last-child:backdrop,
 column-header:last-child .button:backdrop {
     border-image: none;
-    border-width: 0 1px 1px 0;
-    border-radius: 0;
-    border-style: solid;
-    border-color: transparent;
 }
 
 column-header.button:insensitive,
@@ -187,11 +187,29 @@ column-header .button:insensitive {
                                   @borders,
                                   @insensitive_bg_color
                                   ) 0 1 1 0;
-    border-width: 0 1px 1px 0;
-    border-radius: 0;
-    border-style: solid;
-    border-color: transparent;
 }
+
+column-header.button:last-child,
+column-header:last-child .button,
+column-header.button:last-child:active,
+column-header:last-child .button:active,
+column-header.button:last-child:active:hover,
+column-header:last-child .button:active:hover,
+column-header.button:last-child:backdrop,
+column-header:last-child .button:backdrop {
+    border-right-width: 0;
+}
+
+column-header.button:last-child,
+column-header:last-child .button,
+column-header.button:last-child:active,
+column-header:last-child .button:active,
+column-header.button:last-child:active:hover,
+column-header:last-child .button:active:hover {
+    border-image: none;
+    border-color: mix(@borders, @theme_base_color, 0.5);
+}
+
 
 /* unfocused window: generic element borders */
 .selection-mode.toolbar .suggested-action.button:backdrop, 
